# precis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Scaling Laws for Transfer_openai_mini.md  attention_is_all_you_need_claude_summary.md  attention_is_all_you_need_gemini_summary.md  docker-compose.yml  pyproject.toml  recursive_language_models_claude_summary.md  refactor.md
.github/workflows/: ci.yml
docs/: architecture.md  database.md  testing.md
examples/: prompt_providers.py
outputs/: Accuracy, recall, precision, and related metrics_summary.md  obsidian_AI_Evals_claude_claude-sonnet-4-5-20250929_summary.md  obsidian_Code_pubsub__claude_sonnet_summary.md
scripts/: migrate_prompts_to_db.py
src/modelo_kit/: __init__.py  llm_factory.py  llm_service.py  main.py  prompts.yaml
src/modelo_kit/cli/: __init__.py  app.py  handlers.py  menu.py  prompts.py
src/modelo_kit/core/: __init__.py  filename_utils.py  interfaces.py  output.py
src/modelo_kit/llms/: __init__.py  llm_base.py  llm_claude.py  llm_deepseek.py  llm_gemini.py  llm_openai.py
src/modelo_kit/models/: __init__.py  content.py  llm_output_models.py  paper_model.py  prompt_model.py  summary_model.py
src/modelo_kit/parsers/: __init__.py  base.py  markdown.py  paper.py  parser_base.py  parser_facade.py  pdf.py  pdf_font_parser.py  pdf_toc_parser.py
src/modelo_kit/services/: __init__.py  llm_service.py  obsidian_service.py  obsidian_vault.py  paper_service.py  prompt_provider.py  prompt_service.py  summarizer_service.py  web_service.py
src/precis/: __init__.py  container.py  llm_factory.py  prompts.yaml
src/precis/api/: __init__.py  dependencies.py  errors.py  main.py  middleware.py  schemas.py
src/precis/api/routes/: health.py  prompts.py  summarize.py
src/precis/cli/: __init__.py  app.py  handlers.py  prompts.py
src/precis/config/: __init__.py  settings.py
src/precis/core/: __init__.py  enums.py  output.py
src/precis/domain/: __init__.py  errors.py  llm.py
src/precis/llms/: __init__.py  llm_base.py  llm_claude.py  llm_deepseek.py  llm_gemini.py  llm_openai.py
src/precis/models/: __init__.py
src/precis/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/precis/orchestration/: __init__.py  pipeline.py  step.py  tools.py
src/precis/parsers/: __init__.py  base.py  markdown.py  paper.py  pdf.py
src/precis/ports/: __init__.py  llm.py  prompts.py  tokens.py
src/precis/services/: __init__.py  llm_service.py  obsidian_service.py  obsidian_vault.py  prompt_provider.py  prompt_service.py  summarizer_service.py  web_service.py
tests/: conftest.py
tests/unit/: test_api.py  test_cli.py  test_container.py  test_errors.py  test_filename_utils.py  test_metrics.py  test_models.py  test_obsidian_parser.py  test_orchestration.py  test_output_writer.py  test_paper_summarizer.py  test_ports.py  test_settings.py  test_yaml_prompt_provider.py
