[project]
name = "modelo-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DimitarAtanassov", email = "dimitar789558@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.124.0",
    "floating-prompts",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.1.0",
    "pdfminer>=20191125",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
floating-prompts = { path = "../floating_prompts", editable = true }

[project.scripts]
modelo-kit = "modelo_kit.cli.app:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.uv]
native-tls = true

[tool.mypy]
strict = true

[tool.ruff]
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "C90",    # Mccabe complexity
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-ASYNC
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pyteststyle
    "PL",     # pylint
    "PERF",   # perflint
]
ignore = [
    "PLR2004",  # Magic values in comparisons
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    '@overload',
]
fail_under = 100