[project]
name = "precis"
version = "0.1.0"
description = "A multi-LLM toolkit for parsing and summarizing research papers, Obsidian vaults, and web pages."
readme = "README.md"
authors = [
    { name = "DimitarAtanassov", email = "dimitar789558@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.1.0",
    "pdfminer>=20191125",
    "pymupdf>=1.26.7",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "typer>=0.15.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
# Opt-in distributed tracing. Enable with PRECIS_OTEL_ENABLED=true once installed.
otel = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

# NOTE: the database-backed prompt store (PRECIS_PROMPT_SOURCE=database) relies on
# the external `floating_prompts` package. The core defaults to bundled YAML
# prompts; install floating_prompts separately to enable the database provider.

[project.scripts]
precis = "precis.cli.app:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
]

[tool.uv]
native-tls = true

[tool.mypy]
strict = true

# floating_prompts is a local editable dependency without published type stubs.
[[tool.mypy.overrides]]
module = ["floating_prompts.*"]
ignore_missing_imports = true

# opentelemetry is an optional extra (precis[otel]); guarded imports in tracing.py.
[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"

[tool.ruff]
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "C90",    # Mccabe complexity
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-ASYNC
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pyteststyle
    "PL",     # pylint
    "PERF",   # perflint
]
ignore = [
    "PLR2004",  # Magic values in comparisons
]

[tool.ruff.lint.per-file-ignores]
# Tests assert, use fixtures, and hardcode sample values by design.
"tests/**" = [
    "S101",    # asserts are the point of a test
    "ANN",     # annotations not required on test functions/fixtures
    "PLR2004", # magic values are fine in test expectations
    "S105",    # hardcoded fake secrets in fixtures
    "S106",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    '@overload',
]
# Ratchet floor: raised each phase as the suite grows. A 100% gate on a
# previously untested codebase is not credible; we climb it phase by phase.
fail_under = 58